k3s/on-line-boutique/templates/networkpolicy-allow-frontend-to-shippingservice-50051.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-shippingservice-50051
  namespace: online-boutique
  labels:
    app.kubernetes.io/name: allow-frontend-to-shippingservice-50051
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: on-line-boutique
    cloudman.io/creator: Anderson-Dutra
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: shippingservice
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: frontend
      ports:
        - protocol: TCP
          port: 50051
